--- a/Translation/PRP_en_fr.xml
+++ b/Translation/PRP_en_fr.xml
@@ -470,6 +470,12 @@
       <Dest>Le Troisième Rail</Dest>
     </String>
     <String List="0">
+      <EDID>SuperDuperMart01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Super-Duper Mart</Source>
+      <Dest>Super-Duper Mart</Dest>
+    </String>
+    <String List="0">
       <EDID>NationalGuardTrainingYard01</EDID>
       <REC>CELL:FULL</REC>
       <Source>National Guard Recruitment Office</Source>
@@ -683,7 +689,7 @@
       <EDID>DmndDugoutInn01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dugout Inn</Source>
-      <Dest>L&apos;Auberge de l&apos;abri</Dest>
+      <Dest>L&apos;auberge de l&apos;Abri</Dest>
     </String>
     <String List="0">
       <EDID>CambridgePD01</EDID>
@@ -770,6 +776,12 @@
       <Dest>Station Andrew</Dest>
     </String>
     <String List="0">
+      <EDID>zLexingtonGarage</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Lexington Parking Garage</Source>
+      <Dest>Garage de Lexington</Dest>
+    </String>
+    <String List="0">
       <EDID>zUnusedSubwayTerminalShowcase</EDID>
       <REC>CELL:FULL</REC>
       <Source>Terminals &amp; Holotapes, Oh My.</Source>
@@ -797,7 +809,7 @@
       <EDID>DLC04HubFizztopMountainInterior01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Fizztop Mountain</Source>
-      <Dest>Mont pétillant</Dest>
+      <Dest>Mont Pétillant</Dest>
     </String>
     <String List="0">
       <EDID>GoodneighborTheMemoryDen</EDID>
@@ -1019,7 +1031,7 @@
       <EDID>DLC04BottlingPlant02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Secure Beverageer Lab</Source>
-      <Dest>Sécurisez le laboratoire docteur ès soda.</Dest>
+      <Dest>Laboratoire de docteur ès soda sécurisé</Dest>
     </String>
     <String List="0">
       <EDID>SandyCovesHome01</EDID>
@@ -1194,6 +1206,12 @@
       <REC>CELL:FULL</REC>
       <Source>Prydwen Command Deck</Source>
       <Dest>Passerelle de commandement du Prydwen</Dest>
+    </String>
+    <String List="0">
+      <EDID>zLexingtonPharmacy</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Lexington Pharmacy</Source>
+      <Dest>Pharmacie de Lexington</Dest>
     </String>
     <String List="0">
       <EDID>RelayTowerInt03</EDID>
@@ -1742,6 +1760,12 @@
       <Dest>Salle de boxe</Dest>
     </String>
     <String List="0">
+      <EDID>zPOIJoel06</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
+      <Dest>Club des Électriciens Amateurs - Cave</Dest>
+    </String>
+    <String List="0">
       <EDID>DLC03POI40Int</EDID>
       <REC>CELL:FULL</REC>
       <Source>Pump Control</Source>
@@ -1763,7 +1787,7 @@
       <EDID>NahantOceanSociety02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nahant Oceanological Research Lab</Source>
-      <Dest>Laboratoire de recherche océanographique de Nahant</Dest>
+      <Dest>Laboratoire de recherches océanographiques de Nahant</Dest>
     </String>
     <String List="0">
       <EDID>AtomatoysCorporateHQ01</EDID>
