--- a/Translation/PRP_en_pl.xml
+++ b/Translation/PRP_en_pl.xml
@@ -8,6 +8,18 @@
   </Params>
   <Content>
     <String List="0">
+      <EDID>[00000000]</EDID>
+      <REC>TES4:CNAM</REC>
+      <Source>BenRierimanu</Source>
+      <Dest>BenRierimanu</Dest>
+    </String>
+    <String List="0">
+      <EDID>[00000000]</EDID>
+      <REC>TES4:SNAM</REC>
+      <Source>https://www.nexusmods.com/fallout4/mods/46403 0.59</Source>
+      <Dest>https://www.nexusmods.com/fallout4/mods/46403 0.59</Dest>
+    </String>
+    <String List="0">
       <EDID>CroupManor01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Croup Manor Basement</Source>
@@ -470,6 +482,12 @@
       <Dest>Trzecia Szyna</Dest>
     </String>
     <String List="0">
+      <EDID>SuperDuperMart01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Super-Duper Mart</Source>
+      <Dest>Superdupermarket</Dest>
+    </String>
+    <String List="0">
       <EDID>NationalGuardTrainingYard01</EDID>
       <REC>CELL:FULL</REC>
       <Source>National Guard Recruitment Office</Source>
@@ -768,6 +786,12 @@
       <REC>CELL:FULL</REC>
       <Source>Andrew Station</Source>
       <Dest>Stacja Andrew</Dest>
+    </String>
+    <String List="0">
+      <EDID>zLexingtonGarage</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Lexington Parking Garage</Source>
+      <Dest>Parking zadaszony w Lexington</Dest>
     </String>
     <String List="0">
       <EDID>zUnusedSubwayTerminalShowcase</EDID>
@@ -1196,6 +1220,12 @@
       <Dest>Pokład dowodzenia Prydwenu</Dest>
     </String>
     <String List="0">
+      <EDID>zLexingtonPharmacy</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Lexington Pharmacy</Source>
+      <Dest>Apteka w Lexington</Dest>
+    </String>
+    <String List="0">
       <EDID>RelayTowerInt03</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bunker</Source>
@@ -1385,7 +1415,7 @@
       <EDID>zLexingtonLaundromat</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Laundromat</Source>
-      <Dest>Pralnia w Lexington</Dest>
+      <Dest>Pralnia samoobsługowa w Lexington</Dest>
     </String>
     <String List="0">
       <EDID>FensKenmoreStation</EDID>
@@ -1740,6 +1770,12 @@
       <REC>CELL:FULL</REC>
       <Source>Boxing Gym</Source>
       <Dest>Bokserska sala treningowa</Dest>
+    </String>
+    <String List="0">
+      <EDID>zPOIJoel06</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
+      <Dest>Klub Elektryka Hobbysty - piwnica</Dest>
     </String>
     <String List="0">
       <EDID>DLC03POI40Int</EDID>
